# agentic-ai-auto-triage

./: .env.example  CLAUDE.md  README.md  pyproject.toml
config/: config.json
config/schemas/: approval.schema.json  config.schema.json  finding.schema.json  tool.schema.json
designs/: solution-architecture.drawio
docs/: PROJECT_VALIDATION_REPORT.md  RUNBOOK.md  agentic-ai-terraform-devops-spec.md
prompts/: initial-prompt.md
src/agents/: auto_fix.py  compliance.py  monitor.py  orchestrator.py  peer_review.py
src/app/: api.py  webhook_handlers.py
src/integrations/: llm_provider.py  mcp_client.py  runtime.py  secrets.py  tool_registry.py
src/observability/: audit.py  tracing.py
src/policy/: approval_policy.py  risk_policy.py
src/workflow/: graph.py  state.py
src/workflow/nodes/: approvals.py  auto_fix.py  branch_checks.py  classify_findings.py  deploy.py  evidence.py  initialize_tools.py  load_config.py  monitor.py  notify.py  peer_review.py  pr_checks.py  repo_context.py  review_loop_gate.py  route_event.py  update_itsm.py
tests/fixtures/: sample_approval.json  sample_findings.json  sample_pr_webhook.json
tests/integration/: test_workflow.py
tests/unit/: test_approval_policy.py  test_config_loader.py  test_mcp_allowlist.py  test_risk_policy.py  test_secret_redaction.py  test_webhook_handlers.py
tools/: confluence.json  github.json  iac_scanner.json  jira.json  slack.json  terraform.json
