[project]
name = "agentic-terraform-devops"
version = "0.1.0"
description = "Agentic AI platform for Terraform DevOps lifecycle management via LangGraph and MCP"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.7",
    "langchain-anthropic>=0.3.10",
    "langchain-openai>=0.2.14",
    "langchain-mcp-adapters>=0.1.6",
    "langchain-core>=0.3.28",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.5",
    "psycopg[binary,pool]>=3.2.3",
    "boto3>=1.36.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "jsonschema>=4.23.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.4",
    "opentelemetry-sdk>=1.28.4",
    "opentelemetry-instrumentation-fastapi>=0.49b4",
    "mcp>=1.2.0",
]

[project.scripts]
serve = "src.app.api:main"
validate-config = "src.integrations.tool_registry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "moto[s3]>=5.0.22",
    "ruff>=0.8.6",
    "mypy>=1.13.0",
    "types-jsonschema>=4.23.0.20241208",
    "respx>=0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
